      collection and tracks from USB Mass Storage collection. Guessing uses the
      same algorithm as Local Collection.
    * libgpod requirement raised from 0.7.0 to 0.7.93 for better maintainability.
    * When hovering iPod, UMS or MTP collection in collection browser,
      "1.2 GB free" is shown instead of "85% used"; thicker capacity bar.

  BUGFIXES:
    * Fix bug where MySQL password could not be set to 'password'; patch by
      Lachlan Dufton. (BR 272346)
    * Detection and elimination of stale and orphaned iPod tracks now works
      correctly; users are notified about these when iPod is plugged in.
    * iPod playlists now work correctly. (BR 289304)
    * Show correct error when transferring unsupported files to iPod. (BR 234876)
    * Fix m4a tracks transferred as mp4 videos to iPods. Affected users need to
      fully rescan their collection. (BR 268238)
    * Combination of double click and context menu actions caused multiple
      delete of downloaded podcast actions, etc. (BR 297092)
    * Prevent merging tracks with same title but different track (disc) numbers;
      patch by Alexey Neyman.
    * Prevent crash on very quick drag and release of tracks. (BR 295275)
    * Prevent occasional tag corruption on multi-byte UTF8 characters in tags.
    * Do not double-transcode tracks when importing from an audio CD. (BR 263775)
    * Fix resulting filetype when copying a track from Jamendo. (BR 296000)
    * Playlists with a dot in name can now be saved to Playlist Files on Disk. (BR 290318)
    * iPod playlists now appear even when plugged in while Amarok is running. (BR 289303)
    * Show in Media Sources actions no longer reset the collection sorting to artist/album. (BR 231858)
    * Don't mark audio-CD tracks as unplayable (greyed out). (BR 285885)
    * Don't misbehave when track is dropped directly to saved playlist. (BR 293295)
    * Don't report collection of USB Mass Storage tracks as None.