@@ -74,7 +74,7 @@
       <enum>QListView::IconMode</enum>
      </property>
      <property name="mimeType" stdset="0">
-      <string>application/x-amarok-tag-token</string>
+      <string notr="true">application/x-amarok-tag-token</string>
      </property>
     </widget>
    </item>
