@@ -72,6 +72,8 @@ Version 2.6-Beta 1
       "1.2 GB free" is shown instead of "85% used"; thicker capacity bar.
 
   BUGFIXES:
+    * Fix drag & drop in playlist layout editor, filename layout editor and
+      filter editor for non-english locales. (BR 215402)
     * Fix bug where MySQL password could not be set to 'password'; patch by
       Lachlan Dufton. (BR 272346)
     * Detection and elimination of stale and orphaned iPod tracks now works
